--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPS generation</title>
+    <style>
+        *{
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            background-color: beige;
+        }
+
+        #input{
+            border: solid cadetblue 5px;
+            border-radius: 10px;
+            width: 325px;
+            height: 30px;
+        }
+
+        #position{
+            background-color: cadetblue;
+        }
+
+        #generation{
+            background-color: indianred;
+        }
+
+        .btn{
+            margin: 30px;
+            padding: 15px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>GPS generation</h1>
